--- a/Contact.qmd
+++ b/Contact.qmd
@@ -1,83 +1,6 @@
 ---
-title: "Contact Us"
+title: "Contact"
 format: html
+editor: visual
 ---
-
-# Contact Us
-
-Wish to enquire about projects, publications, or anything else? You can reach me via phone or email, or by filling out the form below.
-
-::: contact-info
-<h2>Address</h2>
-
-<p>IABR, 10920 George Mason Circle, Manassas, VA 20110 United States</p>
-
-<h2>Phone</h2>
-
-<p>+1-646-646-4828</p>
-
-<h2>Email</h2>
-
-<p><a href="mailto:skargar@gmu.edu">skargar\@gmu.edu</a></p>
-:::
-
-::: contact-form
-<form action="mailto:skargar@gmu.edu" method="POST" enctype="text/plain">
-
-<label for="name">Full name</label> <input type="text" id="name" name="name" placeholder="Your full name" required>
-
-<label for="email">Email address</label> <input type="email" id="email" name="email" placeholder="Your email" required>
-
-<label for="subject">Subject</label> <input type="text" id="subject" name="subject" placeholder="Subject" required>
-
-<label for="message">Your message</label>
-
-```{=html}
-<textarea id="message" name="message" placeholder="Write something..." style="height:200px" required></textarea>
-```
-<input type="submit" value="Submit">
-
-</form>
-:::
-
-```{=html}
-<style>
-  .contact-info, .contact-form {
-    margin-bottom: 1em;
-  }
-
-  label {
-    display: block;
-    margin-top: 0.5em;
-  }
-
-  input[type=text], input[type=email], textarea {
-    width: 100%;
-    padding: 0.75em;
-    margin-top: 0.25em;
-    margin-bottom: 0.5em;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-
-  input[type=submit] {
-    width: 100%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-
-  form {
-    max-width: 600px;
-  }
-</style>
-```
+Hello
