--- a/Projects.qmd
+++ b/Projects.qmd
@@ -53,3 +53,105 @@ The new visualization of the dot plot improves the readability of the data as we
 # Reference
 
 \[1\] Cotter, D. J., Stefanik, K., Zhang, Y., Thamer, M., Scharfstein, D., & Kaufman, J. (2004). Hematocrit was not validated as a surrogate end point for survival among epoetin-treated hemodialysis patients. *Journal of clinical epidemiology*, 57(10), 1086-1095. <https://doi.org/10.1016/j.jclinepi.2004.05.002>
+
+# First try code:
+
+```{r, echo = FALSE}
+# Load required libraries
+library(ggplot2)
+library(tidyr)
+library(dplyr)
+
+# Define the mortality rates dataframe
+mortality_data <- data.frame(
+  Dose_Quartile = rep(c('Q1', 'Q2', 'Q3', 'Q4', 'All'), each = 6),
+  Hematocrit_Group = rep(c("<30%", "30% to <33%", "33% to <36%", "36% to <39%", ">=39%", "All"), times = 5),
+  Mortality_Rate = c(
+    271, 245, 185, 184, 177, 203, # Q1 data
+    344, 278, 212, 195, 186, 232, # Q2 data
+    425, 316, 247, 199, 180, 265, # Q3 data
+    501, 354, 280, 227, 196, 310, # Q4 data
+    412, 297, 225, 200, 186, 251  # All data
+  )
+)
+
+
+
+# Create the plot
+ggplot(mortality_data, aes(x = Hematocrit_Group, y = Mortality_Rate, fill = Dose_Quartile)) +
+  geom_bar(stat = "identity", position = position_dodge(width= 0.7)) +
+  scale_fill_brewer(palette = "Set2") +
+  labs(title = "Unadjusted 1-year Mortality Rates per 1,000 Patients",
+       subtitle = "By Hematocrit Level and Epoetin Dose Quartile",
+       x = "Hematocrit Group (%)",
+       y = "Mortality Rate (per 1,000 patients)",
+       fill = "Dose Quartile") +
+  theme_minimal() +
+  theme(
+    plot.title = element_text(size = 20, face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(size = 16),
+    axis.title.x = element_text(size = 14, face = "bold", margin = margin(t = 30, b = 5)), # Adjust the top and bottom margin as needed
+    axis.title.y = element_text(size = 14, face = "bold", margin = margin(l = 5, r = 15)),
+    legend.title = element_text(size = 12),
+    legend.position = "bottom",
+    axis.text.x = element_text(angle = 45, hjust = 1, vjust = 0.5, face = "bold")) +  scale_x_discrete(limits = c("<30%", "30% to <33%", "33% to <36%", "36% to <39%", ">=39%", "All"))
+                                                        
+ggsave("mortality_rates_redesigned.png", width = 12, height = 6)
+
+
+```
+
+# Second try code:
+
+```{r, echo = FALSE}
+# Load required libraries
+library(ggplot2)
+library(tidyr)
+library(dplyr)
+
+# Define the mortality rates dataframe
+mortality_data <- data.frame(
+  Dose_Quartile = rep(c('Q1', 'Q2', 'Q3', 'Q4', 'All'), each = 6),
+  Hematocrit_Group = rep(c("<30%", "30% to <33%", "33% to <36%", "36% to <39%", ">=39%", "All"), times = 5),
+  Mortality_Rate = c(
+    271, 245, 185, 184, 177, 203, # Q1 data
+    344, 278, 212, 195, 186, 232, # Q2 data
+    425, 316, 247, 199, 180, 265, # Q3 data
+    501, 354, 280, 227, 196, 310, # Q4 data
+    412, 297, 225, 200, 186, 251  # All data
+  )
+)
+
+# Create the lollipop chart
+ggplot(mortality_data, aes(x = Hematocrit_Group, y = Mortality_Rate, color = Dose_Quartile)) +
+  geom_point(position = position_dodge(width = 0.5), size = 3) +
+  geom_segment(aes(x = Hematocrit_Group, xend = Hematocrit_Group, y = 0, yend = Mortality_Rate), 
+               position = position_dodge(width = 0.3), color = "grey") +
+  scale_color_brewer(palette = "Set2") +
+  labs(title = "Unadjusted 1-year Mortality Rates per 1,000 Patients",
+       subtitle = "By Hematocrit Level and Epoetin Dose Quartile",
+       x = "Hematocrit Group (%)",
+       y = "Mortality Rate (per 1,000 patients)",
+       color = "Dose Quartile") +
+  theme_minimal() +
+  theme(
+    plot.title = element_text(size = 20, face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(size = 16),
+    axis.title.x = element_text(size = 14, face = "bold", margin = margin(t = 30, b = 5)),
+    axis.title.y = element_text(size = 14, face = "bold", margin = margin(l = 5, r = 15)),
+    legend.title = element_text(size = 12),
+    legend.position = "bottom",
+    axis.text.x = element_text(angle = 45, hjust = 1, vjust = 0.5, face = "bold")
+  )
+
+# Save the plot to a file
+ggsave("mortality_rates_lollipop.png", width = 12, height = 6)
+
+
+```
+
+# My presentation:
+
+```         
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=0jKa5T0n7Dk" frameborder="0" allowfullscreen></iframe>
+```
