--- a/Projects.qmd
+++ b/Projects.qmd
@@ -4,7 +4,7 @@ format: html
 editor: visual
 ---
 
-![](badvisualization.PNG){fig-align="center" width="407"}
+![](badvisualization.PNG){fig-align="center" width="517"}
 
 There are several issues with this 3D bar chart that affect its readability and effectiveness:
 
@@ -56,11 +56,12 @@ The new visualization of the dot plot improves the readability of the data as we
 
 # First try code:
 
-```{r, echo = FALSE}
+```{r, message=FALSE, warning=FALSE}
 # Load required libraries
 library(ggplot2)
 library(tidyr)
-library(dplyr)
+library(plotly)  
+
 
 # Define the mortality rates dataframe
 mortality_data <- data.frame(
@@ -78,7 +79,7 @@ mortality_data <- data.frame(
 
 
 # Create the plot
-ggplot(mortality_data, aes(x = Hematocrit_Group, y = Mortality_Rate, fill = Dose_Quartile)) +
+p <-ggplot(mortality_data, aes(x = Hematocrit_Group, y = Mortality_Rate, fill = Dose_Quartile)) +
   geom_bar(stat = "identity", position = position_dodge(width= 0.7)) +
   scale_fill_brewer(palette = "Set2") +
   labs(title = "Unadjusted 1-year Mortality Rates per 1,000 Patients",
@@ -88,26 +89,29 @@ ggplot(mortality_data, aes(x = Hematocrit_Group, y = Mortality_Rate, fill = Dose
        fill = "Dose Quartile") +
   theme_minimal() +
   theme(
-    plot.title = element_text(size = 20, face = "bold", hjust = 0.5),
-    plot.subtitle = element_text(size = 16),
-    axis.title.x = element_text(size = 14, face = "bold", margin = margin(t = 30, b = 5)), # Adjust the top and bottom margin as needed
-    axis.title.y = element_text(size = 14, face = "bold", margin = margin(l = 5, r = 15)),
+    plot.title = element_text(size = 14, face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(size = 12),
+    axis.title.x = element_text(size = 12, face = "bold", margin = margin(t = 30, b = 5)), # Adjust the top and bottom margin as needed
+    axis.title.y = element_text(size = 12, face = "bold", margin = margin(l = 5, r = 15)),
     legend.title = element_text(size = 12),
     legend.position = "bottom",
     axis.text.x = element_text(angle = 45, hjust = 1, vjust = 0.5, face = "bold")) +  scale_x_discrete(limits = c("<30%", "30% to <33%", "33% to <36%", "36% to <39%", ">=39%", "All"))
                                                         
-ggsave("mortality_rates_redesigned.png", width = 12, height = 6)
+p
 
+# Convert ggplot2 plot to plotly
+q <- ggplotly(p)
+q  # Below show the interactive plot
 
 ```
 
 # Second try code:
 
-```{r, echo = FALSE}
+```{r, message=FALSE, warning=FALSE}
 # Load required libraries
 library(ggplot2)
 library(tidyr)
-library(dplyr)
+library(plotly)  
 
 # Define the mortality rates dataframe
 mortality_data <- data.frame(
@@ -123,7 +127,7 @@ mortality_data <- data.frame(
 )
 
 # Create the lollipop chart
-ggplot(mortality_data, aes(x = Hematocrit_Group, y = Mortality_Rate, color = Dose_Quartile)) +
+p <- ggplot(mortality_data, aes(x = Hematocrit_Group, y = Mortality_Rate, color = Dose_Quartile)) +
   geom_point(position = position_dodge(width = 0.5), size = 3) +
   geom_segment(aes(x = Hematocrit_Group, xend = Hematocrit_Group, y = 0, yend = Mortality_Rate), 
                position = position_dodge(width = 0.3), color = "grey") +
@@ -135,23 +139,27 @@ ggplot(mortality_data, aes(x = Hematocrit_Group, y = Mortality_Rate, color = Dos
        color = "Dose Quartile") +
   theme_minimal() +
   theme(
-    plot.title = element_text(size = 20, face = "bold", hjust = 0.5),
-    plot.subtitle = element_text(size = 16),
-    axis.title.x = element_text(size = 14, face = "bold", margin = margin(t = 30, b = 5)),
-    axis.title.y = element_text(size = 14, face = "bold", margin = margin(l = 5, r = 15)),
+    plot.title = element_text(size = 14, face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(size = 12),
+    axis.title.x = element_text(size = 12, face = "bold", margin = margin(t = 30, b = 5)),
+    axis.title.y = element_text(size = 12, face = "bold", margin = margin(l = 5, r = 15)),
     legend.title = element_text(size = 12),
     legend.position = "bottom",
     axis.text.x = element_text(angle = 45, hjust = 1, vjust = 0.5, face = "bold")
-  )
+  ) +
+  scale_x_discrete(limits = c("<30%", "30% to <33%", "33% to <36%", "36% to <39%", ">=39%", "All"))
 
-# Save the plot to a file
-ggsave("mortality_rates_lollipop.png", width = 12, height = 6)
 
+p
+
+# Convert ggplot2 plot to plotly
+q <- ggplotly(p)
+q  # Below show the interactive plot
 
 ```
 
 # My presentation:
 
-```         
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=0jKa5T0n7Dk" frameborder="0" allowfullscreen></iframe>
+```{=html}
+<iframe width="800" height="450" src="https://www.youtube.com/embed/0jKa5T0n7Dk" frameborder="0" allowfullscreen></iframe>
 ```
